# InventoryManagementSystem

./: CMakeLists.txt  LICENSE  README.md
include/: DatabaseHandler.h  FileHandler.h  Inventory.h  Item.h  UI.h
src/: DatabaseHandler.cpp  FileHandler.cpp  Inventory.cpp  Item.cpp  UI.cpp  main.cpp
tests/: test_filehandler.cpp  test_inventory.cpp  test_item.cpp
